unpackaged/objects/FamilyInfo__c.object
<CustomObject>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>国籍</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>台湾</fullName>
                </value>
                <value>
                    <fullName>韓国</fullName>
                </value>
                <value>
                    <fullName>アメリカ</fullName>
                </value>
                <value>
                    <fullName>イラン</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>オーストラリア</fullName>
                </value>
                <value>
                    <fullName>オーストリア</fullName>
                </value>
                <value>
                    <fullName>オランダ</fullName>
                </value>
                <value>
                    <fullName>カナダ</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>スイス</fullName>
                </value>
                <value>
                    <fullName>スペイン</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>チェコ</fullName>
                </value>
                <value>
                    <fullName>ドイツ</fullName>
                </value>
                <value>
                    <fullName>トルコ</fullName>
                </value>
                <value>
                    <fullName>ニュージーランド</fullName>
                </value>
                <value>
                    <fullName>ネパール</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>フランス</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>ベラルーシ</fullName>
                </value>
                <value>
                    <fullName>ベルギー</fullName>
                </value>
                <value>
                    <fullName>ポーランド</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NickName__c</fullName>
        <inlineHelpText>香港人のニックネームを入力します。
通常は、何も入力しません。</inlineHelpText>
        <label>ニックネーム</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Health_Insurance__c</fullName>
        <label>備考（健保情報）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Child_Birth__c</fullName>
        <formula>MemberShimei__r.OMS_Child_Birth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(OMS)Child Birth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Dental__c</fullName>
        <formula>MemberShimei__r.OMS_Dental__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(OMS)Dental</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Examination__c</fullName>
        <formula>MemberShimei__r.OMS_Examination__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(OMS)Examination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Medical__c</fullName>
        <formula>MemberShimei__r.OMS_Medical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(OMS)Medical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_Vaccination__c</fullName>
        <formula>MemberShimei__r.OMS_Vaccination__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(OMS)Vaccination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtaAgency__c</fullName>
        <label>取扱</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WB扱い</fullName>
                </value>
                <value>
                    <fullName>WB以外</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtaInsuranceShiki__c</fullName>
        <label>保険始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OtaInsuranceShuki__c</fullName>
        <label>保険満期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OtaKeepPlace__c</fullName>
        <label>保管場所</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtaName__c</fullName>
        <label>OTA保険会社名称</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未確認</fullName>
                </value>
                <value>
                    <fullName>保険なし</fullName>
                </value>
                <value>
                    <fullName>AIU保険会社</fullName>
                </value>
                <value>
                    <fullName>JI傷害火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>東京海上日動火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>富士火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>日新火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>朝日火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>共栄火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>セゾン自動車火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>セコム損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>ニッセイ同和損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>あいおい損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>日本興亜損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>ニッセイ同和損害保険株式会社(JI)</fullName>
                </value>
                <value>
                    <fullName>日立 Health Care Program</fullName>
                </value>
                <value>
                    <fullName>Chubb損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災保険（香港)有限公司</fullName>
                </value>
                <value>
                    <fullName>株式会社損害保険ジャパン</fullName>
                </value>
                <value>
                    <fullName>日本財産保険(香港)有限公司</fullName>
                </value>
                <value>
                    <fullName>AIG INSURANCE HONG KONG LTD</fullName>
                </value>
                <value>
                    <fullName>東京海上火災保険（香港）有限公司</fullName>
                </value>
                <value>
                    <fullName>ニュ－インディア保険会社</fullName>
                </value>
                <value>
                    <fullName>平安養老保険</fullName>
                </value>
                <value>
                    <fullName>中国人民保険</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災保険公司　上海分公司</fullName>
                </value>
                <value>
                    <fullName>三菱東京UFJ Health Care Program</fullName>
                </value>
                <value>
                    <fullName>長生人寿保険有限公司</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災有限公司　広州分公司</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtaNote__c</fullName>
        <label>OTA備考</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtaRyaku__c</fullName>
        <formula>CASE(  OtaName__c  , 
&quot;未確認&quot;,&quot;未確認&quot;,
&quot;保険なし&quot;,&quot;なし&quot;,
&quot;AIU保険会社&quot;,&quot;AIU&quot;, 
&quot;JI傷害火災保険株式会社&quot;,&quot;JI&quot;, 
&quot;東京海上日動火災保険株式会社&quot;,&quot;東海&quot;, 
&quot;富士火災海上保険株式会社&quot;,&quot;富士&quot;, 
&quot;日新火災海上保険株式会社&quot;,&quot;日新&quot;, 
&quot;朝日火災海上保険株式会社&quot;,&quot;朝日&quot;, 
&quot;共栄火災海上保険株式会社&quot;,&quot;共栄&quot;, 
&quot;セゾン自動車火災保険株式会社&quot;,&quot;セゾン&quot;, 
&quot;セコム損害保険株式会社&quot;,&quot;セコム&quot;, 
&quot;ニッセイ同和損害保険株式会社&quot;,&quot;ニ同和&quot;, 
&quot;あいおい損害保険株式会社&quot;,&quot;あいおい&quot;, 
&quot;日本興亜損害保険株式会社&quot;,&quot;日興亜&quot;, 
&quot;ニッセイ同和損害保険株式会社(JI)&quot;,&quot;ニ同和JI&quot;, 
&quot;日立 Health Care Program&quot;,&quot;日立HCP&quot;, 
&quot;エース損害保険株式会社&quot;,&quot;エース&quot;, 
&quot;三井住友海上火災保険株式会社&quot;,&quot;三井&quot;, 
&quot;三井住友海上火災保険（香港)有限公司&quot;,&quot;三井HK&quot;, 
&quot;株式会社損害保険ジャパン&quot;,&quot;損ジャ&quot;, 
&quot;日本財産保険(香港)有限公司&quot;,&quot;SJNK(香港)&quot;,
&quot;株式会社損害保険ジャパン　香港支店&quot;,&quot;損ジャHK&quot;, 
&quot;東京海上火災保険（香港）有限公司&quot;,&quot;東海HK&quot;, 
&quot;ニュ－インディア保険会社&quot;,&quot;インディア&quot;, 
&quot;平安人寿保険&quot;,&quot;平安人寿&quot;, 
&quot;平安養老保険&quot;,&quot;平安養老&quot;, 
&quot;三井住友海上火災保険公司　上海分公司&quot;,&quot;三井上海&quot;, 
&quot;三菱東京UFJ Health Care Program&quot;,&quot;三菱HCP&quot;, 
&quot;長生人寿保険有限公司&quot;,&quot;長生人寿&quot;, 
&quot;American International Underwriters,Limited&quot;,&quot;AIUL&quot;, 
&quot;三井住友海上火災有限公司　広州分公司&quot;,&quot;三井広州&quot;,
&quot;日本興亜保険（亜洲）有限公司&quot;,&quot;日興亜ア&quot;,
&quot;あいおいニッセイ同和損害保険株式会社&quot;,&quot;あいおい同和&quot;,
&quot;United Insurance Company of Vietnam&quot;,&quot;UICV&quot;,
&quot;マーシュ&quot;,&quot;マーシュ&quot;, 
&quot;損保ジャパン日本興亜インドネシア&quot;,&quot;SJNK-ID&quot;, 
&quot;三井住友インドネシア&quot;,&quot;MS-ID&quot;, 
&quot;三井住友海上火災保険公司　江蘇分公司&quot;,&quot;三井江蘇&quot;,
&quot;損害保険ジャパン日本興亜株式会社&quot;,&quot;SJNK&quot;,
&quot;Health Care Program&quot;,&quot;HCP&quot;,
&quot;カード付帯&quot;,&quot;カード&quot;, 
&quot;その他保険&quot;,&quot;その他&quot;, 
&quot;&quot;)</formula>
        <label>OTA略称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PassportNo__c</fullName>
        <label>パスポート№</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>地域</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>華北</fullName>
                </value>
                <value>
                    <fullName>華中</fullName>
                </value>
                <value>
                    <fullName>華東</fullName>
                </value>
                <value>
                    <fullName>華南</fullName>
                </value>
                <value>
                    <fullName>東北</fullName>
                </value>
                <value>
                    <fullName>西北</fullName>
                </value>
                <value>
                    <fullName>西南</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_and_Area__c</fullName>
        <label>エリア</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>アジア</fullName>
                </value>
                <value>
                    <fullName>北米</fullName>
                </value>
                <value>
                    <fullName>中南米</fullName>
                </value>
                <value>
                    <fullName>欧州</fullName>
                </value>
                <value>
                    <fullName>オセアニア</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>中東</fullName>
                </value>
                <value>
                    <fullName>アフリカ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>続柄</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>夫</fullName>
                </value>
                <value>
                    <fullName>妻</fullName>
                </value>
                <value>
                    <fullName>息子</fullName>
                </value>
                <value>
                    <fullName>娘</fullName>
                </value>
                <value>
                    <fullName>父</fullName>
                </value>
                <value>
                    <fullName>母</fullName>
                </value>
                <value>
                    <fullName>兄弟</fullName>
                </value>
                <value>
                    <fullName>姉妹</fullName>
                </value>
                <value>
                    <fullName>親戚</fullName>
                </value>
                <value>
                    <fullName>知人</fullName>
                </value>
                <value>
                    <fullName>飼犬</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RescueCost__c</fullName>
        <label>救援者費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Security_Dept_Phone__c</fullName>
        <formula>KeiyakuCompanyName__r.Security_Dept_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>セキュリティ担当部署電話番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Dept__c</fullName>
        <formula>KeiyakuCompanyName__r.Security_Dept__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>セキュリティ担当部署</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_PIC_Email__c</fullName>
        <formula>KeiyakuCompanyName__r.Security_PIC_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>セキュリティ担当者Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_PIC_Mobile__c</fullName>
        <formula>KeiyakuCompanyName__r.Security_PIC_Mobile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>セキュリティ担当者携帯電話</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_PIC__c</fullName>
        <formula>KeiyakuCompanyName__r.Security_PIC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>セキュリティ担当者名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeiKana__c</fullName>
        <label>姓（カナ）</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeiMeiKana__c</fullName>
        <formula>SeiKana__c &amp;&quot;　&quot;&amp; MeiKana__c</formula>
        <label>姓名（カナ）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeiMeiRoma__c</fullName>
        <formula>MeiRoma__c &amp; &quot; &quot; &amp;  SeiRoma__c</formula>
        <label>姓名（ローマ字）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeiRoma__c</fullName>
        <label>姓（ローマ字）</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAreaCd__c</fullName>
        <formula>CASE( KeiyakuKeitai__c , 
&quot;法人／家族Global Plus Member&quot;,&quot;GP&quot;,
&quot;個人／家族Global Plus Member&quot;,&quot;GP&quot;, 
&quot;法人／家族Global Member&quot;,&quot;G&quot;,
&quot;法人／家族China&quot;, &quot;C&quot;, 
&quot;個人／家族China&quot;, &quot;C&quot;, 
&quot;法人／家族Asian&quot;, &quot;A&quot;, 
&quot;個人／家族Asian&quot;, &quot;A&quot;, 
&quot;法人／家族&quot;,&quot;F&quot;,
&quot;チャイナボウルファミリー&quot;,&quot;CB&quot;,
&quot;法人／家族Asian B Plan&quot;, &quot;AB&quot;, 
&quot;&quot;)</formula>
        <label>サービスエリアコード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>性別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>男</fullName>
                </value>
                <value>
                    <fullName>女</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShokenGetSituation__c</fullName>
        <label>証券入手状況</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未入手</fullName>
                </value>
                <value>
                    <fullName>取寄中</fullName>
                </value>
                <value>
                    <fullName>入手済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShokenNo__c</fullName>
        <label>証券番号</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shonendo_Shiki__c</fullName>
        <inlineHelpText>現地医療保険のみ</inlineHelpText>
        <label>初年度始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShozokuAreaCd__c</fullName>
        <formula>CASE( ShozokuArea__c , 
&quot;北京&quot;,&quot;NBJ&quot;,
&quot;秦皇島&quot;,&quot;NQH&quot;,
&quot;河北省&quot;,&quot;NHB&quot;,
&quot;内モンゴル&quot;,&quot;NNM&quot;,
&quot;山西省&quot;,&quot;NSX&quot;,
&quot;天津&quot;,&quot;NTJ&quot;,
&quot;河南省&quot;,&quot;NHN&quot;,
&quot;株州&quot;,&quot;MZZ&quot;,
&quot;武漢&quot;,&quot;MWH&quot;,
&quot;湖南省&quot;,&quot;SHN&quot;,
&quot;青島&quot;,&quot;NQD&quot;,
&quot;山東省&quot;,&quot;NSD&quot;,
&quot;上海&quot;,&quot;MSH&quot;,
&quot;安徽省&quot;,&quot;MAH&quot;,
&quot;杭州&quot;,&quot;MHZ&quot;,
&quot;浙江省&quot;,&quot;MZJ&quot;,
&quot;寧波&quot;,&quot;MNB&quot;,
&quot;南通&quot;,&quot;MNT&quot;,
&quot;江蘇省&quot;,&quot;MJS&quot;,
&quot;蘇州&quot;,&quot;MSZ&quot;,
&quot;無錫&quot;,&quot;MWX&quot;,
&quot;常州&quot;,&quot;MCZ&quot;,
&quot;南京&quot;,&quot;MNJ&quot;,
&quot;昆山&quot;,&quot;MKS&quot;,
&quot;太倉&quot;,&quot;MTC&quot;,
&quot;厦門&quot;,&quot;SXM&quot;,
&quot;福州&quot;,&quot;SFZ&quot;,
&quot;福建省&quot;,&quot;SFJ&quot;,
&quot;江西&quot;,&quot;SJX&quot;,
&quot;東莞&quot;,&quot;SDG&quot;,
&quot;深セン&quot;,&quot;SSZ&quot;,
&quot;広東省&quot;,&quot;SGD&quot;,
&quot;海南省&quot;,&quot;SKN&quot;,
&quot;汕頭&quot;,&quot;SST&quot;,
&quot;恵州&quot;,&quot;SHZ&quot;,
&quot;広州&quot;,&quot;SGZ&quot;,
&quot;韶関&quot;,&quot;SSG&quot;,
&quot;広西&quot;,&quot;SGX&quot;,
&quot;佛山&quot;,&quot;SFS&quot;,
&quot;肇慶&quot;,&quot;ZQT&quot;,
&quot;珠海&quot;,&quot;SZH&quot;,
&quot;中山&quot;,&quot;SZS&quot;,
&quot;黒龍江省&quot;,&quot;NHL&quot;,
&quot;吉林省&quot;,&quot;NJL&quot;,
&quot;瀋陽&quot;,&quot;NSY&quot;,
&quot;大連&quot;,&quot;NDL&quot;,
&quot;遼寧省&quot;,&quot;NLN&quot;,
&quot;寧夏&quot;,&quot;MNX&quot;,
&quot;新疆&quot;,&quot;MXJ&quot;,
&quot;西安&quot;,&quot;MXA&quot;,
&quot;雲南省&quot;,&quot;MYN&quot;,
&quot;貴州&quot;,&quot;MGZ&quot;,
&quot;四川省&quot;,&quot;MSC&quot;,
&quot;重慶&quot;,&quot;MCQ&quot;,
&quot;成都&quot;,&quot;MCD&quot;,
&quot;香港&quot;,&quot;AHK&quot;,
&quot;ハノイ&quot;,&quot;VHN&quot;,
&quot;ホーチミン&quot;,&quot;VHC&quot;,
&quot;ハイフォン&quot;,&quot;VHP&quot;,
&quot;ダナン&quot;,&quot;VDN&quot;,
&quot;東京&quot;,&quot;ATK&quot;,
&quot;大阪&quot;,&quot;AOS&quot;,
&quot;常熟&quot;,&quot;MCS&quot;,
&quot;張家港&quot;,&quot;MZJ&quot;,
&quot;鄭州&quot;,&quot;NZZ&quot;,
&quot;襄樊&quot;,&quot;MXH&quot;,
&quot;十堰&quot;,&quot;NSX&quot;,
&quot;江門&quot;,&quot;SJM&quot;,
&quot;平湖&quot;,&quot;MPH&quot;,
&quot;長春&quot;,&quot;NCC&quot;,
&quot;煙台&quot;,&quot;NYT&quot;,
&quot;ZZZ&quot;)</formula>
        <label>所属地区コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShozokuArea__c</fullName>
        <label>所属地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Jurisdiction__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>河北省</fullName>
                </value>
                <value>
                    <fullName>内モンゴル</fullName>
                </value>
                <value>
                    <fullName>山西省</fullName>
                </value>
                <value>
                    <fullName>河南省</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>塘沽</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>山東省</fullName>
                </value>
                <value>
                    <fullName>煙台</fullName>
                </value>
                <value>
                    <fullName>黒龍江省</fullName>
                </value>
                <value>
                    <fullName>吉林省</fullName>
                </value>
                <value>
                    <fullName>長春</fullName>
                </value>
                <value>
                    <fullName>瀋陽</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>遼寧省</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>寧夏</fullName>
                </value>
                <value>
                    <fullName>新疆</fullName>
                </value>
                <value>
                    <fullName>西安</fullName>
                </value>
                <value>
                    <fullName>雲南省</fullName>
                </value>
                <value>
                    <fullName>貴州</fullName>
                </value>
                <value>
                    <fullName>平湖</fullName>
                </value>
                <value>
                    <fullName>鄭州</fullName>
                </value>
                <value>
                    <fullName>杭州</fullName>
                </value>
                <value>
                    <fullName>浙江省</fullName>
                </value>
                <value>
                    <fullName>寧波</fullName>
                </value>
                <value>
                    <fullName>四川省</fullName>
                </value>
                <value>
                    <fullName>成都</fullName>
                </value>
                <value>
                    <fullName>重慶</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaikaiDate__c</fullName>
        <label>退会日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TreatmentCost__c</fullName>
        <label>治療費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TreatmentRescueCost__c</fullName>
        <label>治療・救援者費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_ServiceAreaCd__c</fullName>
        <formula>CASE( KeiyakuKeitai__c , 
&quot;法人／家族China&quot;, &quot;China,中国,香港&quot;, 
&quot;個人／家族China&quot;, &quot;China,中国,香港&quot;, 
&quot;法人／家族C&amp;V&quot;, &quot;C&amp;V,中国,香港,ベトナム&quot;, 
&quot;個人／家族C&amp;V&quot;, &quot;C&amp;V,中国,香港,ベトナム&quot;, 
&quot;法人／家族Asian&quot;, &quot;Asian,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ&quot;, 
&quot;個人／家族Asian&quot;, &quot;Asian,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ&quot;,
&quot;法人／家族Asian B Plan&quot;, &quot;Asian,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ&quot;,   
&quot;法人／家族&quot;, &quot;China,中国,香港&quot;, 
&quot;個人／家族&quot;, &quot;China,中国,香港&quot;, 
&quot;チャイナボウルファミリー&quot;, &quot;China,中国,香港&quot;, 
&quot;法人/家族Global Plus Member&quot;, &quot;Global Plus,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ,メキシコ&quot;, 
&quot;法人/家族Global Member&quot;, &quot;Global,中国,香港,ベトナム,インド,インドネシア,フィリピン,カンボジア,ミャンマー,スリランカ,シンガポール,タイ,マレーシア,韓国,台湾,バングラデシュ,メキシコ&quot;, 
&quot;&quot;)</formula>
        <label>WEB用サービスエリアコード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>o_MemberShimei__c</fullName>
        <externalId>true</externalId>
        <label>o_MemberShimei</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sid</label>
        <type>Text</type>
    </fields>
    <label>会員（家族）情報</label>
    <listViews>
        <fullName>A1</fullName>
        <columns>CountryName__c</columns>
        <columns>Jurisdiction__c</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>MemberNo__c</columns>
        <columns>NAME</columns>
        <columns>MemberShimei__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>startsWith</operation>
            <value>ISSA,CATHY,日賀野</value>
        </filters>
        <label>A1. 業務統括部</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>x01</fullName>
        <columns>Jurisdiction__c</columns>
        <columns>ShozokuArea__c</columns>
        <columns>MemberNo__c</columns>
        <columns>NAME</columns>
        <columns>MemberShimei__c</columns>
        <columns>Commodity__c</columns>
        <columns>KeiyakuKeitai__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MemberKubun__c</field>
            <operation>equals</operation>
            <value>会員</value>
        </filters>
        <label>01. すべての会員家族</label>
    </listViews>
    <listViews>
        <fullName>x20</fullName>
        <columns>MemberNo__c</columns>
        <columns>NAME</columns>
        <columns>ShozokuArea__c</columns>
        <columns>MemberShimei__c</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MemberKubunB__c</field>
            <operation>equals</operation>
            <value>会員</value>
        </filters>
        <filters>
            <field>Commodity__c</field>
            <operation>equals</operation>
            <value>ベトナムメディック</value>
        </filters>
        <filters>
            <field>KeiyakuKeitai__c</field>
            <operation>notEqual</operation>
            <value>社員／家族</value>
        </filters>
        <label>20. ベトナム会員</label>
        <sharedTo>
            <role>DeveloperName70583713081</role>
            <role>DeveloperName705837130813</role>
            <roleAndSubordinates>AC</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>会員(家族)氏名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Family_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(MemberShimei__r.KeitaiCd__c &lt;&gt; &quot;F&quot;,   MemberShimei__r.CommodityCd__c  &lt;&gt;&quot;3&quot;, ISNULL(TaikaiDate__c))</errorConditionFormula>
        <errorMessage>会員本人が家族でない場合は、登録できません。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InsuranceCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND( isnull(TaikaiDate__c) = False,
ISPICKVAL( OtaAgency__c , &quot;WB扱い&quot;),
AND(isnull(InsuranceCancelDate__c)  = True,  ISBLANK(InsuranceCancelContact__c) = True))</errorConditionFormula>
        <errorMessage>WB扱いの保険に加入していますので、必ず保険契約地に連絡してください！！！！！</errorMessage>
    </validationRules>
</CustomObject>